# Archon

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.custom  Dockerfile.mcp  README.md  __init__.py  add_visible_logs.py  agent_prompts.py  archon_graph.py  archon_graph.py.backup  cleanup_logs.sh  custom_json_encoder.py  final_report.py  fix_openrouter.py  graph_service.py  graph_service.py.bak  graphql_client.py  init_python_env.sh  logging_config.py  ollama_config.json  patch_datetime_bug.py  profile_manager.py  pyproject.toml  requirements-core.txt  requirements.txt  requirements.txt.bak  run_docker.py  run_docker.py.bak  run_windsurf_workflows_crawler.py  run_with_patches.py  start_services.sh  streamlit_ui.py  switch_to_ollama.py  switch_to_openai.py  switch_to_openrouter.py  test_archon.py  test_env.py  test_free_model.py  (+9 more)
.cursor/: mcp.json
.streamlit/: config.toml
agent-resources/flows/: agent_flows.md  agent_flows.md.backup_20250810_023331
agents/: __init__.py  base_agent.py
api/: __init__.py  profiles.conflict.py  profiles.py
api/endpoints/: __init__.py
api/middlewares/: __init__.py
archon/: advisor_agent.py  advisor_deps.py  agent_prompts.py  agent_refiner_agent.py  agent_tools.py  archon_graph.py  archon_graph.py.bak  archon_llm  content_restructurer_graph.py  crawl_mcp_docs.py  crawl_pydantic_ai_docs.py  crawl_windsurf_workflows_docs.py  crawler_core.py  custom_llm.py  cv_analyzer.py  cv_graph.py  cv_schema_adapter.py  docs_graph.py  docs_maintainer_graph.py  graph_service.py  graph_service.py.backup_20250810_025600  llm_provider.py  llm_provider.py.bak  monkey_patch_openai.py  ollama_model.py  openrouter_client.py  openrouter_patch.py  prompt_refiner_agent.py  pydantic_ai_coder.py  pydantic_ai_coder.py.bak  run_cv_from_archon_state.py  test_agent.py  tools_refiner_agent.py
archon/agents/: README.md  __init__.py  advisor_agent.py  agent_tools.py  generalist_agent.py  pydantic_ai_coder.py
archon/cli/: __init__.py  main.py
config/: __init__.py  config.py  ollama_config.py
core/: __init__.py
examples/: enhanced_graph.py
graphs/: __init__.py  archon_graph.conflict.py  archon_graph.py  content_restructurer_graph.py  cv_graph.py  docs_maintainer_graph.py
llm/: __init__.py  error_handling.py  factory.py  llm_provider.py  llm_providers.py
logs/: .gitignore
mcp/: __init__.py  mcp_server.py
mcp_service/: Dockerfile  __init__.py  fastmcp.py  main.py  mcp_server.py  requirements.txt
new_archon/: advisor_agent.py.patch  archon_graph.py.bak  archon_graph.py.broken  ollama_model.py  pydantic_ai_coder.py  schemas.py
scripts/: benchmark_profiles.py  change_profile.py  dynamic_profile.py  final_report.py  fix_ollama_base_url.py  fix_ollama_profile.py  fix_tinyllama_profile.py  run_docker.py  run_mcp_crawler.py  run_windsurf_workflows_crawler.py  run_with_patches.py  switch_to_ollama.py  switch_to_openrouter.py  update_env_from_profile.py
services/: __init__.py
state/: agent_state.py  checkpoint.py  state_migration.py
streamlit_pages/: agent_service.py  chat.py  database.py  documentation.py  environment.py  intro.py  mcp.py  neo4j.py
tests/: test_advisor_agent.py  test_openrouter_connection.py  test_openrouter_integration.py  test_openrouter_simple.py
utils/: instrumentation.py  neo4j_client.py  site_pages.sql  utils.py
(+128 files in other folders)
