[project]
name = "archon"
version = "0.1.0"
description = ""
authors = [
    {name = "Cascade",email = "cascade@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph (==0.5.2)",
    "langchain-core (==0.3.67)",
    "supabase (==2.16.0) ; python_version >= \"3.10\" and python_version < \"4.0\"",
    "httpx (>=0.28.1) ; python_version >= \"3.10\" and python_version < \"4.0\"",
    "pydantic-ai-slim (==0.0.22) ; python_version >= \"3.10\" and python_version < \"4.0\"",
    "pydantic-graph (==0.0.22) ; python_version >= \"3.10\" and python_version < \"4.0\"",
    "typing-extensions (==4.14.0) ; python_version >= \"3.10\" and python_version < \"4.0\"",
    "aiohttp (==3.11.18) ; python_version >= \"3.10\" and python_version < \"4.0\"",
    "crawl4ai (>=0.7.1,<0.8.0)"
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
langgraph = "==0.5.2"
langchain-core = "==0.3.67"
supabase = "==2.16.0"
httpx = ">=0.28.1"
pydantic-ai-slim = "==0.0.22"
pydantic-graph = "==0.0.22"
typing-extensions = "==4.14.0"
aiohttp = "==3.11.18"

[tool.poetry.group.dev.dependencies]
supabase = { version = "^2.16.0", python = ">=3.10,<4.0"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
