[tool.poetry]
name = "archon"
version = "0.1.0"
description = "Archon - Agentic AI Framework"
authors = ["Archon Team <team@archon.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.9.1"
fastapi = "^0.116.1"
uvicorn = "^0.28.0"
pydantic = "^2.5.2"
pydantic-ai = {extras = ["cpu"], version = "^0.4.7"}
pydantic-ai-slim = {extras = ["anthropic", "cohere", "groq", "mistral", "openai", "vertexai"], version = "^0.4.7"}
pydantic-settings = "^2.1.0"
pydantic-graph = "^0.4.7"
langchain-core = "^0.3.0"
langgraph = "^0.5.3"
langsmith = "^0.1.117"
openai = "^1.12.0"
streamlit = "^1.28.0"
streamlit-option-menu = "^0.3.6"
supabase = "^2.8.0"
watchfiles = "^0.21.0"
uuid6 = "^2024.7.10"
beautifulsoup4 = "^4.12.2"
lxml = "^5.1.0"
nltk = "^3.9.1"
litellm = "^1.53.1"

# Force CPU-only PyTorch with specific version and source
torch = { version = "2.0.1", source = "pytorch-cpu" }

# Crawl4AI with platform-specific markers to exclude ARM64/Windows and no extras
crawl4ai = { version = "0.7.0", python = "^3.10", markers = "sys_platform != 'win32' and platform_machine != 'aarch64' and platform_machine != 'arm64'" }

# Explicitly disable CUDA and GPU-related packages
cuda-python = { version = "*", optional = true }
nvidia-cublas-cu12 = { version = "*", optional = true }
nvidia-cuda-nvrtc-cu12 = { version = "*", optional = true }
logfire = "^3.22.0"
html2text = "^2025.4.15"
gql = "^3.5.3"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

# Ensure no CUDA/GPU dependencies are installed
[tool.poetry.extras]
# Keep this empty to prevent any optional dependencies

[tool.pytest.ini_options]
python_paths = [".", "../../tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
pytest = ">=8.2"
pytest-cov = "^4.1.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.1"
